--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     compile 'io.intercom.android:intercom-sdk-base:5.+'
     compile 'com.google.firebase:firebase-core:16.0.0'
     compile 'io.intercom.android:intercom-sdk-fcm:5.+'
-    compile 'com.google.firebase:firebase-messaging:11.+'
+    compile 'com.google.firebase:firebase-messaging:17+'
 }
 
 apply plugin: 'com.google.gms.google-services'
