--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,6 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+APP_ID="gkhipr3y"
+API_KEY="android_sdk-804c09a3d3ab19a985c151fe226a661d14a0ca2c"
